# QA-Perso-MB-PC

./: .gitignore  .gitmodules  BFV1 C174.json  BFV1 C236.json  BFV2.json  BFV3.json  Dictionaries.json  LC Completed C174.json  LC Started C174.json  LCStarted.json  QAAppAllure.py  README.md  pyproject.toml  readme.md  requirements.txt
App/: CTAHandlerDOM.py  CTAVerifier.py  CTAVerifierPDP.py  CategoriesFile.py  ConfigCompleted.py  ConfigStarted.py  CookiesHandler.py  CreateAPIandXHR.py  CreateDriver.py  CustomHeader.py  Element Verification Configuration.py  Element Verification Configurator IT.py  Element Verification Configurator.py  Element Verification Parent Child.py  Element Verification Shadow DOM copy.py  Element Verification.py  ImageVerifier.py  OuterAT.html  OuterIT.html  QA App Unittest.py  ScreenshotHandler.py  TestSteps.py  VerifyPersonalizationAndCapture.py  XHRResponseCapturer.py  modelcodesAPI.py  vehicle_api.py
TestsCodes/: PersonalizedCTA1_test.py  PersonalizedCTA2_test.py  PersonalizedCTA3_test.py  PersonalizedCTA4_test.py  test_LastConfigCompleted.py  test_LastConfigStarted.py  test_LastSeenPDP.py  test_LastSeenSRP.py  test_bfv1.py  test_bfv2.py  test_bfv3.py
__pycache__/: QAAppAllure.cpython-313-pytest-8.3.5.pyc.14068  QAAppAllure.cpython-313-pytest-8.3.5.pyc.21076
allure-action/: data.json
allure-results/: 0054ece8-eb15-48b1-861c-8581936a77e0-result.json  00c61120-9e5d-40a4-a4dc-bffd2b2931f3-container.json  017609e4-268f-411d-a779-ce535dd03171-attachment.json  02033036-b848-40ca-8453-9cac2315b9ca-result.json  (+764 more)
tests_dictionaries/: BFV1.json  (+4 more)
(+236 files in other folders)
